test/nginx/nginx-deploy-selfsigned.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deploy-1
  template:
    metadata:
      labels:
        app: nginx-deploy-1
    spec:
      containers:
        - name: nginx-app1
          image: hashicorp/http-echo
          args:
            - "-text=Nginx-Demo-App-1"
          ports:
            - containerPort: 5678 # Default port for the image hashicorp/http-echo
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deploy-2
  template:
    metadata:
      labels:
        app: nginx-deploy-2
    spec:
      containers:
        - name: nginx-app1
          image: hashicorp/http-echo
          args:
            - "-text=Nginx-Demo-App-2"
          ports:
            - containerPort: 5678 # Default port for the image hashicorp/http-echo
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
