test/nginx/nginx-service-selfsigned.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-1
spec:
  selector:
    app: nginx-deploy-1
  ports:
    - name: svc-http
      port: 1234 # Expose the service on internal port 1234
      targetPort: 5678 # Forward traffic to internal port 5678
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-2
spec:
  selector:
    app: nginx-deploy-2
  ports:
    - name: svc-http
      port: 1234 # Expose the service on internal port 1234
      targetPort: 5678 # Forward traffic to internal port 5678
  type: ClusterIP
